--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     border-bottom: #828282 1px solid;
     width: 100%;
     margin-left: 250.65px;
+    margin-right: 250.65px;
     margin-top: 87.94;
     display: flex;
     flex-direction: row;
