--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.cdnfonts.com/css/gilroy-bold');
 
-*{
+* {
     margin: 0, auto;
     box-sizing: border-box;
 }
@@ -33,8 +33,8 @@
     margin-left: 30%;
     margin-right: 30%;
     margin-bottom: 49.67px;
-    
-    
+
+
 }
 
 #name {
@@ -71,54 +71,90 @@
     width: 70px;
     height: 20.06px;
     margin-bottom: 54px;
-    
+
 }
 
 
 #photo {
-    
+
     background: url(BSPP2266.png) no-repeat;
     margin-left: 30%;
     margin-right: 30%;
+    width: 60%;
     height: 387px;
     margin-bottom: 104.06px;
 }
 
 .textcontainer {
     box-sizing: border-box;
-    width: 1445px;
+    width: 100%;
     height: 506px;
-    left: 0px;
-    top: 768px;
     background: #F6F6F6;
-    margin-top: 104.06px;
+    padding-top: 120px;
+    padding-bottom: 107px;
 }
 
 #me {
-    
-    left: 44.68%;
-    right: 44.54%;
-    top: 18.66%;
-    bottom: 80.43%;
     font-family: 'Gilroy-Bold';
     font-size: 34px;
     line-height: 42px;
     text-align: center;
     color: #070707;
-    width: 155.65px;
+    width: 10%;
     height: 43.06px;
+    margin-left: 45%;
+    margin-right: 45%;
+
 }
 
 .text {
     box-sizing: border-box;
-    margin-left: 480.33px;
-    margin-top: 181px;
-    margin-bottom: 107px;
-    width: 485.34px;
+    margin-left: 33%;
+    margin-right: 33%;
+    margin-top: 17, 6px;
+    width: 33%;
     height: 218px;
     font-family: 'Gilroy-Medium';
     font-size: 18px;
     text-align: center;
     line-height: 21.83px;
     color: #070707;
+}
+
+.skills {
+    height: 610px;
+    width: 100%;
+}
+
+#skills {
+
+    margin-left: 46%;
+    margin-right: 46%;
+    margin-top: 91px;
+    font-family: 'Gilroy-Bold';
+    font-size: 34px;
+    line-height: 42px;
+    text-align: center;
+}
+
+#programs {
+    font-family: 'Gilroy-Medium';
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    margin-left: 42%;
+    margin-right: 42%;
+    margin-top: 69px;
+}
+
+.logos{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+#photoshop{
+    background: url();
 }
