logos images changes

--- a/style.css
+++ b/style.css
@@ -164,6 +164,9 @@
 }
 #aftereffects{
     background: url(AdobeAfterEffectslogo.png);
+    width: 89.21px;
+    height: 88.57px;
+    background-color: #12002C 100% ;
 }
 #figma{
     background: url(Figmalogo.png);
