--- a/style.css
+++ b/style.css
@@ -163,10 +163,9 @@
     background: url(AdobeIllustrator.png);
 }
 #aftereffects{
-    background: url(AdobeAfterEffectslogo.png);
     width: 89.21px;
     height: 88.57px;
-    background-color: #12002C 100% ;
+    background: #12002C 100%;
 }
 #figma{
     background: url(Figmalogo.png);
