--- a/style.css
+++ b/style.css
@@ -37,6 +37,14 @@
 
 }
 
+.title {
+    font-family: 'Gilroy-Bold';
+    font-size: 34px;
+    line-height: 42px;
+    text-align: center;
+    color: #070707;
+}
+
 #name {
 
     font-family: 'Gilroy-Bold';
@@ -95,11 +103,6 @@
 }
 
 #me {
-    font-family: 'Gilroy-Bold';
-    font-size: 34px;
-    line-height: 42px;
-    text-align: center;
-    color: #070707;
     width: 10%;
     height: 43.06px;
     margin-left: 45%;
@@ -131,10 +134,6 @@
     margin-left: 46%;
     margin-right: 46%;
     margin-top: 91px;
-    font-family: 'Gilroy-Bold';
-    font-size: 34px;
-    line-height: 42px;
-    text-align: center;
 }
 
 #programs {
@@ -242,7 +241,7 @@
 .portfolio {
     height: 2253px;
     background: #F6F6F6;
-    display:flex;
+    display: flex;
     flex-direction: column;
     justify-content: center;
 }
@@ -255,4 +254,21 @@
     font-size: 34px;
     line-height: 42px;
     text-align: center;
+}
+
+.link {
+    font-family: 'Gilroy-Medium';
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    text-decoration-line: underline;
+    color: #070707;
+}
+.contacts{
+    height: 4759px;
+}
+.sn{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
