--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    justify-content: center;
     margin-bottom: 49.67px;
 }
 
@@ -46,6 +47,7 @@
     width: 123.51px;
     height: 118.17px;
     margin-top: 39.69px;
+    transform: translateX(-125px);
 }
 
 #designer {
@@ -64,7 +66,7 @@
     font-size: 16px;
     line-height: 20px;
     color: #828282;
-    transform: rotate(-90deg);
+    transform:translateX(150px) rotate(-90deg);
     margin-top: 68px;
     width: 70px;
     height: 20.06px;
