--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.cdnfonts.com/css/gilroy-bold');
 
 * {
-    margin: 0 auto;
     box-sizing: border-box;
 }
 
 #main {
     width: 70%;
+    margin: auto;
 }
 
 #header {
@@ -14,7 +14,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
 }
 
 .header {
@@ -28,8 +27,8 @@
     margin-bottom: 31.86px;
 }
 
-header.a,
-header.a:visited {
+a,
+a:visited {
     text-decoration: none;
     color: #828282;
 }
@@ -37,7 +36,7 @@ header.a:visited {
 .presentation {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     margin-bottom: 49.67px;
 }
 
@@ -50,7 +49,6 @@ header.a:visited {
     width: 123.51px;
     height: 118.17px;
     margin-top: 39.69px;
-    transform: translateX(-80px);
 }
 
 #designer {
@@ -69,7 +67,7 @@ header.a:visited {
     font-size: 16px;
     line-height: 20px;
     color: #828282;
-    transform: translateX(110px) rotate(-90deg);
+    transform: translateX(30px) rotate(-90deg);
     margin-top: 68px;
     width: 70px;
     height: 20.06px;
@@ -135,7 +133,15 @@ header.a:visited {
     line-height: 42px;
     text-align: center;
     color: #070707;
+}
 
+.skillstext {
+    margin-top: 69px;
+    font-family: 'Gilroy-Medium';
+    font-size: 18px;
+    text-align: center;
+    color: #070707;
+    margin-bottom: 83px;
 }
 
 #programs {
@@ -195,13 +201,11 @@ header.a:visited {
 #name1 {
     width: 70.29px;
     height: 27.27px;
-
 }
 
 #name2 {
     width: 63.26px;
     height: 27.27px;
-
 }
 
 #name3 {
@@ -227,8 +231,7 @@ header.a:visited {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 166.46px;
-
+    width: 166.5px;
 }
 
 .star {
@@ -261,7 +264,6 @@ header.a:visited {
 .link {
     font-family: 'Gilroy-Medium';
     font-size: 18px;
-    line-height: 22px;
     text-align: center;
     text-decoration-line: underline;
     color: #070707;
@@ -296,7 +298,6 @@ header.a:visited {
     border-radius: 30px;
     margin-top: 29.6px;
     margin-bottom: 80px;
-
 }
 
 a[href^="mailto:"] {
@@ -307,17 +308,16 @@ a[href^="mailto:"] {
     line-height: 22px;
     text-align: center;
     text-decoration: none;
-
 }
 
 .icons {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    width: 25%;
-    margin-bottom: 46px;
-
+    justify-content: space-between;
+    width: 30%;
+    margin: auto;
 }
+
 
 .message {
     font-family: 'Gilroy-Medium';
@@ -333,5 +333,5 @@ a[href^="mailto:"] {
     line-height: 17px;
     text-align: center;
     color: #828282;
-
+    margin-top: 46px;
 }
