--- a/style.css
+++ b/style.css
@@ -90,11 +90,10 @@ a:visited {
     background: #F6F6F6;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-top: 104.6px;
-    padding-top: 120.25px;
-    padding-bottom: 107px;
+    margin-bottom: 91px;
 }
 
 #about {
@@ -110,7 +109,6 @@ a:visited {
 .text {
     margin-top: 17. 6px;
     width: 33%;
-    height: 218px;
     font-family: 'Gilroy-Medium';
     font-size: 18px;
     text-align: center;
@@ -215,7 +213,7 @@ a:visited {
 }
 
 .portfolio {
-    height: 2253px;
+    height: 2300px;
     width: 100%;
     background: #F6F6F6;
     text-align: center;
@@ -247,7 +245,7 @@ a:visited {
 }
 
 .contacts {
-    height: 622px;
+    height: 590px;
     text-align: center;
 }
 
@@ -320,9 +318,13 @@ a[href^="mailto:"] {
     #main,
     .presentation,
     .picture,
-    #skills,
     .portfolio,
-    .skillstext {
+    #logos,
+    .logos,
+    .photoshop,
+    .illustrator,
+    .aftereffects,
+    .figma {
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -340,10 +342,12 @@ a[href^="mailto:"] {
         font-size: 47px;
         line-height: 58px;
         color: #000000;
+        margin-bottom: 23px;
     }
 
     #designer {
         color: #090909;
+        margin-bottom: 37px;
     }
 
     .picture {
@@ -356,16 +360,33 @@ a[href^="mailto:"] {
         align-items: center;
     }
 
-    .logos,
-    .logosnames,
-    .mainstars,
-    .stars {
-        display: grid;
-        grid-template-columns: 80%;
+    .photoshop,
+    .illustrator,
+    .aftereffects,
+    .figma {
+        align-items: center;
+        justify-content: space-between;
     }
 
-    #name1 {
-        grid-row: 2;
+    #logos {
+        justify-content: space-between;
+        margin-bottom: 20px;
+    }
+
+    .logos {
+        margin-bottom: 80px;
+    }
+
+    .portfolio {
+        background: #F6F6F6;
+    }
+
+    .skills{
+        height: auto;
+    }
+
+    .img{
+        width: 90%;
     }
 
 }
