--- a/style.css
+++ b/style.css
@@ -122,13 +122,10 @@ a:visited {
 }
 
 #skills {
-    margin-left: 46%;
-    margin-right: 46%;
     margin-top: 91px;
     margin-bottom: 69.1px;
     font-family: 'Gilroy-Bold';
     font-size: 34px;
-    line-height: 42px;
     text-align: center;
     color: #070707;
 }
@@ -152,13 +149,17 @@ a:visited {
     margin-top: 69px;
 }
 
+.logos {
+    margin-right: 30px;
+}
+
 #logos {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     width: 50%;
     text-align: center;
     margin: auto;
+    box-sizing: border-box;
 }
 
 .stars {
@@ -213,7 +214,7 @@ a:visited {
 }
 
 .portfolio {
-    height: 2300px;
+    height: auto;
     width: 100%;
     background: #F6F6F6;
     text-align: center;
@@ -233,6 +234,8 @@ a:visited {
     width: 100%;
     height: auto;
 }
+
+
 
 .link {
     font-family: 'Gilroy-Medium';
@@ -313,11 +316,13 @@ a[href^="mailto:"] {
     display: none;
 }
 
-.navbar{
+.navbar {
     display: none;
 }
 
 @media all and (max-width:750px) {
+
+    * {}
 
     #main,
     .presentation,
@@ -333,7 +338,7 @@ a[href^="mailto:"] {
         flex-direction: column;
         width: 100%;
         margin: auto;
-
+        overflow-x: hidden;
     }
 
     #header,
@@ -385,160 +390,150 @@ a[href^="mailto:"] {
         background: #F6F6F6;
     }
 
-    .skills{
+    .skills {
         height: auto;
     }
 
-    .img{
+    .img {
         width: 90%;
     }
 
-.navbar{
-    display: flex;
-    position: absolute;
-    top: 65px;
-    margin-top: 0;
-    padding: 0;
-    box-sizing: border-box;
-    width: 90%;
-    box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
-}
+    .navbar {
+        display: flex;
+        position: absolute;
+        top: 65px;
+        margin-top: 0;
+        padding: 0;
+        box-sizing: border-box;
+        width: 100%;
+        box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
+    }
+
+    .container {
+        max-width: 1050px;
+        width: 90%;
+        margin: auto;
+    }
+
+    .nav-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 62px;
+    }
+
+    .navbar .menu-items {
+        display: flex;
+    }
 
 
-.container {
-    max-width: 1050px;
-    width: 90%;
-    margin: auto;
-}
+    .navbar .nav-container li {
+        list-style: none;
+    }
 
+    .navbar .nav-container a {
+        text-decoration: none;
+        padding: 0.7rem;
+    }
 
-.nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 62px;
-}
+    .navbar .nav-container a:hover {
+        font-weight: bolder;
+    }
 
-.navbar .menu-items {
-    display: flex;
-}
+    .nav-container {
+        display: block;
+        position: relative;
+        height: 60px;
+    }
 
-.navbar .nav-container li {
-    list-style: none;
-}
+    .nav-container .checkbox {
+        position: absolute;
+        display: block;
+        height: 32px;
+        width: 33px;
+        top: 20px;
+        right: 10px;
+        z-index: 5;
+        opacity: 0;
+        cursor: pointer;
+    }
 
-.navbar .nav-container a {
-    text-decoration: none;
-    padding: 0.7rem;
-}
+    .nav-container .hamburger-lines {
+        display: block;
+        height: 26px;
+        width: 33px;
+        position: absolute;
+        top: 17px;
+        right: 10px;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 
-.navbar .nav-container a:hover {
-    font-weight: bolder;
-}
+    .nav-container .hamburger-lines .line {
+        display: block;
+        height: 4px;
+        width: 100%;
+        background: #070707;
+    }
 
-.nav-container {
-    display: block;
-    position: relative;
-    height: 60px;
-}
+    .nav-container .hamburger-lines .line1 {
+        transform-origin: 0% 0%;
+        transition: transform 0.4s ease-in-out;
+    }
 
-.nav-container .checkbox {
-    position: absolute;
-    display: block;
-    height: 32px;
-    width: 33px;
-    top: 20px;
-    right: 10px;
-    z-index: 5;
-    opacity: 0;
-    cursor: pointer;
-}
+    .nav-container .hamburger-lines .line2 {
+        transition: transform 0.2s ease-in-out;
+    }
 
-.nav-container .hamburger-lines {
-    display: block;
-    height: 26px;
-    width: 33px;
-    position: absolute;
-    top: 17px;
-    right: 10px;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
+    .nav-container .hamburger-lines .line3 {
+        transform-origin: 0% 100%;
+        transition: transform 0.4s ease-in-out;
+    }
 
-.nav-container .hamburger-lines .line {
-    display: block;
-    height: 4px;
-    width: 100%;
-    background: #070707;
-}
+    .navbar .menu-items {
+     display: none;
+    }
 
-.nav-container .hamburger-lines .line1 {
-    transform-origin: 0% 0%;
-    transition: transform 0.4s ease-in-out;
-}
+    .navbar .menu-items li {
+        margin-bottom: 1.2rem;
+        font-weight: 500;
+    }
 
-.nav-container .hamburger-lines .line2 {
-    transition: transform 0.2s ease-in-out;
-}
+    .nav-container input[type="checkbox"]:checked~.menu-items {
+        display: flex;
+        padding-top: 120px;
+        box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+        height: 100vh;
+        width: 80%;
+        transform: translate(130%);
+        display: flex;
+        flex-direction: column;
+        margin-left: -40px;
+        padding-left: 50px;
+        transition: transform 2s ease-in-out;
+        text-align: center;
+        background: white;
+        color: #828282;
+        font-family: 'Gilroy-Bold';
+        font-size: 18px;
+    }
 
-.nav-container .hamburger-lines .line3 {
-    transform-origin: 0% 100%;
-    transition: transform 0.4s ease-in-out;
-}
+    .nav-container input[type="checkbox"]:checked~.menu-items {
+        transform: translateX(0);
+    }
 
-.navbar .menu-items {
-    padding-top: 120px;
-    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-    height: 100vh;
-    width: 100%;
-    transform: translate(150%);
-    display: flex;
-    flex-direction: column;
-    margin-left: -40px;
-    padding-left: 50px;
-    transition: transform 0.5s ease-in-out;
-    text-align: center;
-}
+    .nav-container input[type="checkbox"]:checked~.hamburger-lines .line1 {
+        transform: rotate(45deg);
+    }
 
-.navbar .menu-items li {
-    margin-bottom: 1.2rem;
-    font-size: 1.5rem;
-    font-weight: 500;
-}
+    .nav-container input[type="checkbox"]:checked~.hamburger-lines .line2 {
+        transform: scaleY(0);
+    }
 
-.logo {
-    position: absolute;
-    top: 5px;
-    right: 15px;
-    font-size: 1.2rem;
-    color: #070707;
-}
+    .nav-container input[type="checkbox"]:checked~.hamburger-lines .line3 {
+        transform: rotate(-45deg);
+    }
 
-.nav-container input[type="checkbox"]:checked~.menu-items {
-    transform: translateX(0);
-}
-
-.nav-container input[type="checkbox"]:checked~.hamburger-lines .line1 {
-    transform: rotate(45deg);
-}
-
-.nav-container input[type="checkbox"]:checked~.hamburger-lines .line2 {
-    transform: scaleY(0);
-}
-
-.nav-container input[type="checkbox"]:checked~.hamburger-lines .line3 {
-    transform: rotate(-45deg);
-}
-
-.nav-container input[type="checkbox"]:checked~.logo {
-    display: none;
-}
-.menu-items{
-    background: white;
-    color: #828282;
-    font-family: 'Gilroy-Bold';
-    font-size: 18px;
-}
 }
