--- a/style.css
+++ b/style.css
@@ -3,15 +3,25 @@
     height: 100px;
     display: flex;
     flex-direction: row;
-    border-bottom: 3px solid #DA6B62
+    border-bottom: 3px solid #DA6B62;
 }
 
-.menu {
+.header .logo {
     display: flex;
     flex-direction: row;
-    font-family: 'Roboto';
+    flex-grow: 3;
+}
+
+.header .menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-family:"Roboto";
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
     line-height: 40px;
+    color: #141323;
+    flex-grow: 1;
+    
 }
