--- a/Final project/style/style.css
+++ b/Final project/style/style.css
@@ -1,6 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     box-sizing: border-box;
     margin: 0;
     font-family: 'Montserrat'
+}
+
+header {
+    width: 100%;
+    height: 789px;
+}
+
+.header {
+    width: 100%;
+    height: auto;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url(.jpg);
+    filter: blur(0.5px);
+    overflow: hidden;
+}
+
+
+
+
+footer {
+    display: flex;
+    flex-direction: row;
+    height: 173px;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2% 11% 2% 11% ;
+
+}
+
+.logoColor{
+    width: 80px;
+    height: 114px;
+}
+
+.footerMenu p,
+.footerContacts {
+    display: flex;
+    flex-direction: column;
+}
+
+.footerSM,
+.footerMail,
+.whatsapp,
+.tg,
+.tgBot {
+    display: flex;
+    flex-direction: row;
+}
+
+.tg img, .tgBot img, .whatsapp img, .footerMail img{
+    margin-right: 10px;
+}
+
+.footerSM{
+    width: 120px;
+    justify-content: space-between;
 }
