--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 .header {
@@ -11,7 +14,7 @@
     border-bottom: 3px solid #DA6B62;
     align-items: center;
     justify-content: space-between;
-    
+
 }
 
 .header .logo {
@@ -21,14 +24,14 @@
     height: 68px;
     align-items: center;
     justify-content: center;
-    
+
 }
 
-.header .logo img{
+.header .logo img {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
 }
 
 
@@ -36,13 +39,12 @@
     width: 55%;
     display: flex;
     flex-direction: row;
-    font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
     line-height: 40px;
     color: #141323;
-    
+
 }
 
 .menu .menu {
@@ -79,7 +81,7 @@
 }
 
 h1 {
-    font-family: 'Roboto';
+
     font-style: normal;
     font-weight: 800;
     font-size: 64px;
@@ -89,7 +91,7 @@ h1 {
 }
 
 p {
-    font-family: 'Roboto';
+
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -102,7 +104,6 @@ p {
     width: 340px;
     height: 72px;
     border-radius: 20px 0px;
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
@@ -120,14 +121,14 @@ p {
     color: #141323;
 }
 
-#forwho h2 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 40px;
-    color: #141323;
-    margin-left: 5%;
-    margin-top: 210px;
+#forwho h2,
+#about h2 {
+
+font-weight: 600;
+font-size: 40px;
+color: #141323;
+margin-left: 5%;
+margin-top: 210px;
 }
 
 .for {
@@ -155,7 +156,7 @@ p {
 #for1 p,
 #for2 p,
 #for3 p {
-    font-family: 'Roboto';
+
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -167,7 +168,7 @@ p {
 #for1 li,
 #for2 li,
 #for3 li {
-    font-family: 'Roboto';
+
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -176,12 +177,89 @@ p {
     margin-left: 20px;
 }
 
-#for1{
+#for1 {
     background-image: url(img/background_for1.png);
 }
-#for2{
+
+#for2 {
     background-image: url(img/background_for2.png);
 }
-#for3{
+
+#for3 {
     background-image: url(img/background_for3.png);
+}
+
+.aboutUs {
+    width: 415px;
+    height: 136px;
+    background: #FFFFFF;
+    border: 3px solid #DA6B62;
+    border-radius: 20px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+#aboutDescription {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 474px;
+}
+
+#mainAbout,
+#mainClasses {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0% 5% 0% 5%;
+}
+
+#number {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 56px;
+    color: #141323;
+}
+
+.aboutUs p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    color: #141323;
+
+}
+
+#mainClasses {
+    margin-top: 100px;
+}
+
+#classes h2 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 40px;
+    color: #141323;
+    margin-left: 5%;
+
+}
+
+.classesDescription {
+    width: 40%;
+    height: 288px;
+}
+
+.classesDescription p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 48px;
+    color: #141323;
+}
+#aboutClasses{
+    display: flex;
+    flex-direction: column;
 }
