--- a/style.css
+++ b/style.css
@@ -122,13 +122,14 @@ p {
 }
 
 #forwho h2,
-#about h2 {
+#about h2,
+.works h2 {
 
-font-weight: 600;
-font-size: 40px;
-color: #141323;
-margin-left: 5%;
-margin-top: 210px;
+    font-weight: 600;
+    font-size: 40px;
+    color: #141323;
+    margin-left: 5%;
+    margin-top: 210px;
 }
 
 .for {
@@ -259,7 +260,110 @@ margin-top: 210px;
     line-height: 48px;
     color: #141323;
 }
-#aboutClasses{
+
+#aboutClasses {
     display: flex;
     flex-direction: column;
+}
+
+#works {
+    display: grid;
+    grid-template-columns: 270px auto 270px;
+    grid-template-rows: 382px;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    width: 97%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+#work1,
+#work2,
+#work3 {
+    grid-row: 1;
+}
+
+#wor4,
+#work5,
+#work6 {
+    grid-row: 2;
+}
+
+#work1 {
+    grid-column: 1/3;
+
+}
+
+#work2 {
+    grid-column: 3/5;
+
+}
+
+#work5 {
+    grid-column: 2/4;
+}
+
+#work6 {
+    grid-column: 4/6;
+}
+
+#work1 img,
+#work2 img,
+#work3 img,
+#work4 img,
+#work5 img,
+#work6 img {
+    width: 100%;
+    height: 100%;
+}
+.button3{
+    margin: 0, auto;
+    width: 340px;
+    position: relative ;
+    margin-left: 50%;
+    margin-right: 50%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+
+}
+#button3{
+    background: #DA6B62;
+    border-color: #DA6B62;
+    color: #FFFFFF;
+    width: 100%;
+    height: 72px;
+    border-radius: 20px 0px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    position:absolute;
+}
+.teachers{
+    border: 3px solid #FC8D84;
+    border-radius: 0px;
+    display: grid;
+    grid-template-columns: 44%;
+    grid-template-rows: 507px;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+}
+
+#teacher1, #teacher2{
+    grid-row: 1;
+}
+
+#teacher3, #teacher4{
+    grid-row: 2;
+}
+
+#teacher5, #teacher6{
+    grid-row: 3;
+}
+
+#teacher1, #teacher3, #teacher5{
+    grid-column: 1;
+}
+
+#teacher2, #teacher4, #teacher6{
+    grid-column: 2;
 }
