--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     border-bottom: 3px solid #DA6B62;
     align-items: center;
     justify-content: space-between;
+    margin: auto;
 
 }
 
@@ -59,6 +60,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin: auto;
 }
 
 .description {
@@ -81,17 +83,14 @@
 }
 
 h1 {
-
     font-style: normal;
     font-weight: 800;
     font-size: 64px;
     line-height: 86px;
     color: #141323;
-
 }
 
 p {
-
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -123,13 +122,15 @@ p {
 
 #forwho h2,
 #about h2,
-.works h2 {
-
+.works h2,
+.teachers h2,
+.work-programs h2,
+.partners h2 {
     font-weight: 600;
     font-size: 40px;
     color: #141323;
     margin-left: 5%;
-    margin-top: 210px;
+    margin-top: 100px;
 }
 
 .for {
@@ -160,8 +161,7 @@ p {
 
 #for1 p,
 #for2 p,
-#for3 p,
-{
+#for3 p {
 font-style: normal;
 font-weight: 400;
 font-size: 30px;
@@ -179,7 +179,7 @@ text-align: center;
 
     font-style: normal;
     font-weight: 400;
-    font-size: 23px;
+    font-size: 25px;
     line-height: 40px;
     color: #141323;
     text-align: center;
@@ -194,7 +194,6 @@ text-align: center;
 #program4 li,
 #program5 li,
 #program6 li {
-
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -225,7 +224,6 @@ text-align: center;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-
 }
 
 #aboutDescription {
@@ -233,6 +231,7 @@ text-align: center;
     flex-direction: column;
     justify-content: space-between;
     height: 474px;
+    margin-right: 140px;
 }
 
 #mainAbout,
@@ -242,6 +241,20 @@ text-align: center;
     justify-content: space-between;
     width: 100%;
     padding: 0% 5% 0% 5%;
+}
+
+#video{
+    background-image: url(img/video_img.png);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 474px;
+    position: relative;
+}
+
+#play-button{
+    position: absolute;
+    right: 40%;
+    top: 40%;
 }
 
 #number {
@@ -269,19 +282,17 @@ text-align: center;
     font-weight: 600;
     font-size: 40px;
     color: #141323;
-    margin-left: 5%;
 
 }
 
 .classesDescription {
-    width: 40%;
+    width: 100%;
     height: 288px;
 }
 
 .classesDescription p {
     font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
+    font-size: 25px;
     line-height: 48px;
     color: #141323;
 }
@@ -343,9 +354,8 @@ text-align: center;
 }
 
 .button3 {
-    margin: 0, auto;
+    margin: auto;
     width: 340px;
-    position: relative;
     margin-left: 50%;
     margin-right: 50%;
     margin-top: 100px;
@@ -363,7 +373,12 @@ text-align: center;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
-    position: absolute;
+}
+
+#button3 a,
+#button3 a:visited{
+    color: #FFFFFF;
+    text-decoration: none;
 }
 
 .flex-container {
@@ -441,8 +456,10 @@ a:visited {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 100%;
     margin-left: 5%;
     margin-right: 5%;
+
 }
 
 #program1,
@@ -455,6 +472,7 @@ a:visited {
     height: 265px;
     background: #FFDCD9;
     border-radius: 60px 0px;
+    padding: 7px;
 
 }
 
@@ -462,4 +480,15 @@ a:visited {
 #program5,
 #program6 {
     margin-top: 20px;
+}
+
+.partners-logos{
+    width:90%;
+    margin: auto;
+    height: 89px;
+}
+
+#logos{
+    width: 100%;
+    height: auto;
 }
