--- a/style.css
+++ b/style.css
@@ -55,12 +55,9 @@
 }
 
 .presentation {
-    width: 100%;
     height: 725px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    margin: auto;
 }
 
 .description {
@@ -68,8 +65,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    width: 52%;
-    margin-left: 5%;
+    width: 55%;
 }
 
 .buttons {
@@ -78,14 +74,17 @@
 }
 
 .girlimg {
-    width: 30%;
-    margin-right: 5%;
+    width: 45%;
+}
+
+.girlimg img{
+    width: 100%;
 }
 
 h1 {
     font-style: normal;
     font-weight: 800;
-    font-size: 64px;
+    font-size: 55px;
     line-height: 86px;
     color: #141323;
 }
@@ -93,7 +92,7 @@ h1 {
 p {
     font-style: normal;
     font-weight: 400;
-    font-size: 30px;
+    font-size: 25px;
     line-height: 48px;
     color: #141323;
 }
@@ -239,8 +238,10 @@ text-align: center;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
-    padding: 0% 5% 0% 5%;
+}
+
+#mainClasses {
+    padding-top: 100px;
 }
 
 #video{
@@ -376,7 +377,9 @@ text-align: center;
 }
 
 #button3 a,
-#button3 a:visited{
+#button3 a:visited,
+.button1 a,
+.button1 a:visited {
     color: #FFFFFF;
     text-decoration: none;
 }
@@ -491,4 +494,16 @@ a:visited {
 #logos{
     width: 100%;
     height: auto;
+}
+.header,
+.presentation,
+.for,
+#mainAbout,
+#mainClasses,
+#works,
+.flex-container,
+.programs,
+.partners-logos {
+    margin: auto;
+    width: 95%;
 }
