--- a/Final project/style/style.css
+++ b/Final project/style/style.css
@@ -9,15 +9,11 @@
 header {
     width: 100%;
     height: 789px;
-}
-
-.header {
-    width: 100%;
-    height: auto;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url(.jpg);
+    background: url(Images/images/Main_page.png);
     filter: blur(0.5px);
     overflow: hidden;
 }
+
 
 
 
