--- a/Final project/style/style.css
+++ b/Final project/style/style.css
@@ -154,7 +154,7 @@ menu {
 .title {
 
     margin-top: 150px;
-    margin-bottom: 90%;
+    margin-bottom: 90px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -202,7 +202,7 @@ menu {
 
 article {
     padding: 7%;
-    
+
 }
 
 article h3 {
@@ -218,4 +218,36 @@ article p {
     line-height: 17px;
     color: #282828;
     text-align: left;
+}
+
+.excursion {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 10% 0 10%;
+    margin-bottom: 40px;
+}
+
+.bus,
+.jeeping,
+.yachting,
+.canyonning {
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+}
+#bus-logo,
+#jeep-logo,
+#yacht-logo,
+#canyon-logo {
+    width: 20%;
+    margin-right: 10px;
+}
+
+#bus-text,
+#jeep-text,
+#yacht-text,
+#canyon-text {
+    margin-right: 20px;
 }
