--- a/Final project/style/style.css
+++ b/Final project/style/style.css
@@ -295,3 +295,70 @@ article p {
     margin: auto;
     margin-top: 20px;
 }
+
+#gallery {
+    display: grid;
+    grid-template-columns: 15% 18.5% 25% 18.5% 15%;
+    grid-template-rows: 280px 124px 124px;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    width: 100%;
+    justify-content: center;
+    
+}
+
+#photo1,
+#photo4,
+#photo3 {
+    grid-row: 1;
+}
+
+#photo2 {
+    grid-row:1/4;
+    grid-column: 3;
+}
+ #photo5,
+ #photo8 {
+    grid-row: 2/4;
+ }
+
+#photo6 {
+    grid-row: 2;
+}
+#photo7 {
+    grid-row: 3
+}
+#photo1 {
+    grid-column: 1/3;
+}
+#photo3 {
+    grid-column: 4;
+}
+#photo4 {
+    grid-column: 5;
+}
+
+#photo5 {
+    grid-column: 1;
+}
+
+#photo6,
+#photo7 {
+    grid-column: 2;
+}
+
+#photo8 {
+    grid-column: 4/6;
+}
+
+#photo1 img,
+#photo2 img,
+#photo3 img,
+#photo4 img,
+#photo5 img,
+#photo6 img,
+#photo7 img,
+#photo8 img {
+    width: 100%;
+    height: 100%;
+}
