--- a/Final project/style/style.css
+++ b/Final project/style/style.css
@@ -12,7 +12,6 @@
 header {
     width: 100%;
     height: 789px;
-    border: 1px solid black;
     filter: blur(0.5px);
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url("../Images/images/Main_page.png");
 }
@@ -304,7 +303,7 @@ article p {
     grid-row-gap: 10px;
     width: 100%;
     justify-content: center;
-    
+
 }
 
 #photo1,
@@ -314,26 +313,31 @@ article p {
 }
 
 #photo2 {
-    grid-row:1/4;
+    grid-row: 1/4;
     grid-column: 3;
 }
- #photo5,
- #photo8 {
+
+#photo5,
+#photo8 {
     grid-row: 2/4;
- }
+}
 
 #photo6 {
     grid-row: 2;
 }
+
 #photo7 {
     grid-row: 3
 }
+
 #photo1 {
     grid-column: 1/3;
 }
+
 #photo3 {
     grid-column: 4;
 }
+
 #photo4 {
     grid-column: 5;
 }
@@ -361,4 +365,53 @@ article p {
 #photo8 img {
     width: 100%;
     height: 100%;
+}
+
+.questions {
+    width: 100%;
+    height: 640px;
+    background: url(../Images/images/background_questions.png);
+    position: relative;
+    padding-right: 10%;
+}
+
+.form {
+    width: 38%;
+    background: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(10px);
+    z-index: 2;
+    height: 100%;
+    position: absolute;
+    left: 57%;
+    padding: 7%;
+}
+
+.form h3 {
+    font-size: 24px;
+    line-height: 29px;
+    color: #FFFFFF;
+}
+
+.form p {
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFC700;
+}
+
+form {
+    border-bottom: 1px solid #FFFFFF;
+    width: 65%;
+    background: transparent;
+}
+
+#name {
+    font-size: 12px;
+    line-height: 15px;
+    color: #FFFFFF
+}
+
+form input {
+    background: transparent;
+    width: 100%;
+    border: none;
 }
