--- a/Final project/style/style.css
+++ b/Final project/style/style.css
@@ -13,7 +13,8 @@ header {
     width: 100%;
     height: 789px;
     filter: blur(0.5px);
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url("../Images/images/Main_page.png");
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url("../Images/images/Main_page.png") no-repeat;
+    background-size: 100%;
 }
 
 footer {
